<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.aws.iotfleetwise.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.aws.iotfleetwise.ui.logs.LogsFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_logs" />

    <fragment
        android:id="@+id/navigation_preferences"
        android:name="com.aws.iotfleetwise.ui.preferences.PreferencesFragment"
        android:label="@string/title_preferences"
        tools:layout="@layout/fragment_preferences" />
</navigation>