<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textPreferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/cloud_setup"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/provisioning_help"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <Button
        android:id="@+id/scanQRCode1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_qr_code"
        android:textColor="#37474F" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>