<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutConnect"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayoutConnect"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry">

        <ImageView
            android:id="@+id/connected_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/red_circle"
            android:contentDescription="@string/connected_icon"
            android:gravity="center_horizontal|center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="5dp" />

        <TextView
            android:id="@+id/connected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            android:textColor="?android:textColorPrimary"
            android:fontFamily="@font/amazonemberregular"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/connected_textview"
            app:layout_constraintTop_toTopOf="@+id/connected_textview" />

        <TextView
            android:id="@+id/campaigns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="4dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/connected"
            app:layout_constraintTop_toTopOf="@+id/connected" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardViewCL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutConnect">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="#747474"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutConnect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/connectImage"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/lightbulb_circle_fill0_wght400_grad0_opsz24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/alexaBlue" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/amazonemberbold"
                    android:paddingStart="5dp"
                    android:text="@string/connectTitle"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/connectImage"
                    app:layout_constraintTop_toTopOf="@id/connectImage" />

                <TextView
                    android:id="@+id/text_configure"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/amazonemberregular"
                    android:text="@string/tConfigure"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/connectImage"
                    app:layout_constraintTop_toBottomOf="@id/title" />

                <Button
                    android:id="@+id/scanQRCode"
                    style="@style/Widget.MyApp.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingStart="5dp"
                    android:text="@string/scan_qr_code"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_configure"
                    app:layout_constraintVertical_bias="0.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="#747474"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="4dp">

                    <ImageView
                        android:id="@+id/locationImage"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:src="@drawable/baseline_add_location_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/alexaBlue" />

                    <TextView
                        android:id="@+id/titleLocation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="4dp"
                        android:fontFamily="@font/amazonemberregular"
                        android:paddingStart="5dp"
                        android:text="@string/locationTitle"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@id/locationImage"
                        app:layout_constraintTop_toTopOf="@id/locationImage" />

                    <TextView
                        android:id="@+id/text_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="37dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/amazonemberregular"
                        android:text="@string/tLocation"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toStartOf="@id/locationImage"
                        app:layout_constraintTop_toBottomOf="@id/titleLocation" />

                    <Button
                        android:id="@+id/allowLocation"
                        style="@style/Widget.MyApp.Button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:paddingStart="5dp"
                        android:text="@string/allowLocation"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text_location"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCampaign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            app:cardBackgroundColor="#747474"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView2">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCampaign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <ImageView
                    android:id="@+id/campaignImage"
                    android:layout_width="34dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:src="@drawable/ic_campaigns"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/alexaBlue" />

                <TextView
                    android:id="@+id/campaigntitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="4dp"
                    android:paddingStart="5dp"
                    android:text="@string/campaignTitle"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/campaignImage"
                    app:layout_constraintTop_toTopOf="@id/campaignImage" />

                <TextView
                    android:id="@+id/text_campaign"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/amazonemberregular"
                    android:text="@string/tCampaign"
                    android:textAlignment="textStart"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/campaignImage"
                    app:layout_constraintTop_toBottomOf="@id/campaigntitle" />

                <TextView
                    android:id="@+id/tvCampaigns"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text=""
                    android:textAlignment="textStart"
                    android:textSize="8sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@id/text_campaign"
                    app:layout_constraintTop_toBottomOf="@id/text_campaign" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/layoutPayload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="37dp"
                    app:layout_constraintStart_toStartOf="@id/tvCampaigns"
                    app:layout_constraintTop_toBottomOf="@id/tvCampaigns">

                    <TextView
                        android:id="@+id/tvPayload"
                        android:layout_width="94dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Payloads Sent:"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvPayloads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="4dp"
                        android:text="0"
                        android:textAlignment="textStart"
                        android:textSize="14sp"
                        app:layout_constraintStart_toEndOf="@id/tvPayload"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/beginTrip"
            style="@style/Widget.MyApp.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingStart="5dp"
            android:text="Begin Data Acquisition"
            android:textColor="@color/white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewCampaign"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>